k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-backend-service
spec:
  selector:
    app: go-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
